--- a/internship.html
+++ b/internship.html
@@ -41,8 +41,34 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.crh.com/job/Canton-Intern-Accouting-%28Canton%2C-MI%29-MI-48188/565852501/?locale=en_US&applySourceOverride=twitter'>Intern - Accouting  (Canton, MI)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6IaVfwD&k=Job&j=o2btbfwB&__jvst=Employee&__jvsd=s5wvPhwH&__jvsc=Twitter&bid=nx5PqMw8'>SpartanNash Careers - Culinary Fresh Merchandising Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/rdi/jobs/spring-summer-2020-web-dev-intern-angular-c-typescript-cD8fQA--ur6Ax7aKjNoogA'>[Spring + Summer 2020] Web Dev Intern (Angular/C#/Typescript) #0134 job at R&amp;D Industries, Inc. in Ames, IA, powered by JobScore</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bluecore/3ffe119b-0318-49e5-a2d3-237563aa3357'>Bluecore - Software Engineer Intern</a></h5> 
+<p><span class="badge badge-light">New York City</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://helloprint.recruitee.com/l/fr/o/data-analystdata-engineer-internship'>
+      Data Analyst/Data Engineer Internship - Helloprint
+    </a></h5> 
+<p><span class="badge badge-light">Rotterdam</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.crh.com/job/Monroe-Intern-Electrical-Engineering-%28Monroe%2C-MI%29-MI-48161/565853401/?locale=en_US&applySourceOverride=twitter'>Intern - Electrical Engineering (Monroe, MI)</a></h5> 
+<p><span class="badge badge-light">United States Canada United States Canada</span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://metalshub.join.com/jobs/476371-internship-entrepreneurship-and-marketing-m-f-d'>Job @ Metals Hub (D?sseldorf): Internship ? Entrep... | JOIN</a></h5> 
+<p><span class="badge badge-light">D?sseldorf, Germany</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.crh.com/job/Canton-Intern-Accouting-%28Canton%2C-MI%29-MI-48188/565852501/?locale=en_US&applySourceOverride=twitter'>Intern - Accouting  (Canton, MI)</a></h5> 
+<p><span class="badge badge-light">United States Canada United States Canada</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/koddi/ae44e4ca-6140-4627-af14-37b666d1024a'>Koddi - Data Analyst Internship</a></h5> 
@@ -59,7 +85,7 @@
 <p><span class="badge badge-light">Lehi, UT, USA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/studio71us/094099f9-1c6b-4376-a180-06f8c97cc9dc'>Studio71 - Business Strategy and Development Internship Winter 2020- Los Angeles</a></h5> 
+<h5><a href='https://jobs.lever.co/studio71us/094099f9-1c6b-4376-a180-06f8c97cc9dc'>Studio71 - Business Strategy and Development Internship Winter 2020- Los Angeles</a></h5> 
 <p><span class="badge badge-light">Los Angeles  Los Angeles  Los Angeles  Los Angeles</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -71,7 +97,7 @@
 <p><span class="badge badge-light">Los Angeles  Los Angeles  Los Angeles  Los Angeles Berlin</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/studio71us/86052e08-da19-4152-94c8-d06d1beab097'>Studio71 - Gaming, Talent Partnerships Internship Winter 2020 - Los Angeles</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/studio71us/86052e08-da19-4152-94c8-d06d1beab097'>Studio71 - Gaming, Talent Partnerships Internship Winter 2020 - Los Angeles</a></h5> 
 <p><span class="badge badge-light">Los Angeles  Los Angeles  Los Angeles  Los Angeles</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -149,7 +175,7 @@
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bandwidth/jobs/1921871'>Job Application for Product Management Intern - Platform at Bandwidth</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bandwidth/jobs/1921871'>Job Application for Product Management Intern - Platform at Bandwidth</a></h5> 
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -169,7 +195,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698641188-intern-legales-compliance'>Biogen Intern Legales & Compliance | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698641188-intern-legales-compliance'>Biogen Intern Legales & Compliance | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -361,7 +387,7 @@
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://towerswatson.referrals.selectminds.com/jobs/research-assistant-intern-12064'>Research Assistant Intern - Willis Towers Watson Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://towerswatson.referrals.selectminds.com/jobs/research-assistant-intern-12064'>Research Assistant Intern - Willis Towers Watson Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -418,7 +444,7 @@ parallel computing? If so, we want to hear from you. NVIDIA is committed to?...<
 <p><span class="badge badge-light">Boulder  Boulder</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ibxhome.referrals.selectminds.com/jobs/phmc-patient-centered-medical-home-care-management-team-clinical-nurse-intern-2647'>PHMC - Patient Centered Medical Home Care Management Team - Clinical Nurse Intern - Independence Blue Cross Careers</a></h5> 
+<h5><a href='https://ibxhome.referrals.selectminds.com/jobs/phmc-patient-centered-medical-home-care-management-team-clinical-nurse-intern-2647'>PHMC - Patient Centered Medical Home Care Management Team - Clinical Nurse Intern - Independence Blue Cross Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -428,30 +454,6 @@ parallel computing? If so, we want to hear from you. NVIDIA is committed to?...<
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/TalentGenGlobalUSA/743999698621592-web-design-developer-intern-virtual-great-reference-portfolio-building'>TalentGen Global, USA Web Design/Developer, Intern (virtual) GREAT reference portfolio building | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/3dhubs/8eb2e0db-9a5c-4f95-a262-778e361b0877'>3D Hubs - 3D Printing Order Fulfilment Intern</a></h5> 
-<p><span class="badge badge-light">Amsterdam</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://www.greatinsurancejobs.com/job/6409706/geospatial-intern-big-/?TrackID=97736'>Geospatial Intern (BIG) job with Travelers Insurance | 6409706</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/relativity/6412e7c7-ac1b-4fdc-a8f5-9b375cc794ba'>Relativity - Software Engineer Intern - Trace (Fall/Winter 2019)</a></h5> 
-<p><span class="badge badge-light">Chicago</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/starry/jobs/4495493002'>Job Application for Starry Internet Installer at Starry</a></h5> 
-<p><span class="badge badge-light">Denver, Colorado</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=o8mWafwk&__jvst=Employee&__jvsd=sJC77gwk&__jvsc=Twitter&bid=nEtcqMw0'>Schneider Electric NAM Careers - Human Resources Intern</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='http://redcross.applytojob.com/apply/QcCIg4K0An/Operations-Intern'>Operations Intern - Kenya Red Cross Society - Career Page</a></h5> 
-<p><span class="badge badge-light">Kenya Kenya</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
